# KDE-Plasma-Plasmoid-template

./: CMakeLists.txt  README.md  rename.sh
package/: CMakeLists.txt  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  configNetwork.qml  main.qml
package/contents/ui/config/: ConfigMisc.qml
package/plugin/: CMakeLists.txt  FileReader.cpp  FileReader.h
scripts/: validate-metadata.py
tests/: CMakeLists.txt  tst_plasmoid.qml  tst_runner.cpp
translate/de/: plasma_applet_de.agundur.myplasmoid.po
translate/fr/: plasma_applet_de.agundur.myplasmoid.po
